WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
311379
Fix availability versions for 26.4 releases
https://bugs.webkit.org/show_bug.cgi?id=311379
Summary
Fix availability versions for 26.4 releases
Elliott Williams
Reported
2026-04-02 17:31:49 PDT
Need to update TBA'd declarations that have shipped publicly.
rdar://171621941
Attachments
Add attachment
proposed patch, testcase, etc.
Elliott Williams
Comment 1
2026-04-02 17:36:29 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/61944
EWS
Comment 2
2026-04-07 13:59:49 PDT
Committed
310735@main
(db97d9b4646e): <
https://commits.webkit.org/310735@main
> Reviewed commits have been landed. Closing PR #61944 and removing active labels.
Jonathan Bedard
Comment 3
2026-04-07 17:39:28 PDT
Reopened Bugzilla. REGRESSION(
310735@main
): Could not build module 'WebKit_Private', Expected ',', tracking revert in
https://bugs.webkit.org/show_bug.cgi?id=311693
.
Elliott Williams
Comment 4
2026-04-08 20:39:59 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/62327
EWS
Comment 5
2026-04-08 22:06:12 PDT
Committed
310819@main
(61055e8bd1d2): <
https://commits.webkit.org/310819@main
> Reviewed commits have been landed. Closing PR #62327 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug